--- a/src/app/campaign/pages/character-page/character-page.component.html
+++ b/src/app/campaign/pages/character-page/character-page.component.html
@@ -1,15 +1,15 @@
 @let character = character$();
 @let characterQuote = characterQuote$();
-@let campaignCharacters = campaignCharacters$();
 @let imageServerModel = imageServerModel$();
 @let quoteServerModel = quoteServerModel$();
 @let encounterServerModel = encounterServerModel$();
 
-@if (character != null && campaignCharacters != null) {
+@if (character != null) {
   <app-character
     [character]="character"
     [characterQuote]="characterQuote"
-    [campaignCharacters]="campaignCharacters"
+    [campaignCharacters]="campaignCharacters()"
+    [campaignOrganizations]="campaignOrganizations()"
     [serverUrl]="serverUrl"
     [quoteServerModel]="quoteServerModel"
     [imageServerModel]="imageServerModel"
@@ -31,5 +31,7 @@
     (encounterConnectionCreate)="onCreateEncounterConnection($event)"
     (encounterConnectionDelete)="onDeleteEncounterConnection($event)"
     (refreshQuote)="onRefreshQuote()"
+    (organizationMembershipCreate)="store.createMembership($event)"
+    (organizationMembershipDelete)="store.deleteMembership($event)"
   ></app-character>
 }
