Fix up character page

--- a/src/app/campaign/pages/character-page/character-page.component.html
+++ b/src/app/campaign/pages/character-page/character-page.component.html
@@ -11,6 +11,8 @@
     [campaignCharacters]="campaignCharacters()"
     [campaignOrganizations]="campaignOrganizations()"
     [serverUrl]="serverUrl"
+    [encounters]="campaignEncounters() ?? []"
+    [sessions]="campaignSessions() ?? []"
     [quoteServerModel]="quoteServerModel"
     [imageServerModel]="imageServerModel"
     [encounterServerModel]="encounterServerModel"
