--- a/src/design/organisms/quote/quote.component.html
+++ b/src/design/organisms/quote/quote.component.html
@@ -1,110 +1,58 @@
-<ng-container *ngIf="quote">
-  <ng-container *ngIf="!isLoadingQuote; else loading">
-    <div class="field">
+<ng-container *ngIf="!isLoadingQuote(); else loading">
+  <div class="field">
+    @let quoteVal = quote();
+    @if (quoteVal) {
       <blockquote class="field__content quote">
         <!-- Quote -->
-        <app-html-text class="quote__text" [text]="quote.quote"></app-html-text>
-  
+        <app-html-text class="quote__text" [text]="quoteVal.quote" />
+
         <!-- Quote Description -->
         <div class="quote__description">
-          <ng-container *ngIf="quote.description">
-            <app-html-text
-              [text]="'- ' + quote.description"
-            ></app-html-text>
-          </ng-container>
-  
-          <ng-container *ngIf="!quote.description">
-            - {{ character.name }}
-          </ng-container>
+          @if (quoteVal.description) {
+            <app-html-text [text]="'- ' + quoteVal.description" />
+          }
+
+          @if (!quoteVal.description) {
+            - {{ character().name }}
+          }
         </div>
-  
+
         <app-separator></app-separator>
-  
+
         <!-- Quote Connections -->
         <div class="quote__connections d-inline icon-container">
           <app-badge-list
-            [entries]="badgeEntries"
+            [entries]="badgeEntries()"
             [label]="'Characters'"
             [createOptions]="{
-              options: campaignCharacters,
+              options: campaignCharacters(),
               labelProp: 'name',
-              valueProp: 'pk'
+              valueProp: 'pk',
             }"
-            [canCreate]="canCreate"
-            [canDelete]="canDelete"
+            [canCreate]="canCreate()"
+            [canDelete]="canDelete()"
             [cancelButtonType]="'DARK'"
             (entryCreate)="onConnectionCreate($event)"
             (entryDelete)="onConnectionDelete($event)"
           ></app-badge-list>
         </div>
       </blockquote>
-  
-      <!-- Quote Refresh/Create/Edit/Delete Icons -->
-      <div class="field__controls">
-        <!-- Load Next Quote -->
-        <app-button 
-          class="field__control"
-          title="Load new quote"
-          [type]="'INFO'"
-          [icon]="'refresh'"
-          (click)="getNextRandomQuote()"
-        ></app-button>
-        
-        <!-- Edit Quote -->
-        <ng-container *ngIf="canUpdate">
-          <app-button
-            class="field__control"
-            title="Edit Quote"
-            [type]="'SECONDARY'"
-            [icon]="'pencil'"
-            (click)="quoteUpdate.emit(quote)"
-          ></app-button>
-        </ng-container>
-  
-        <!-- Create Quote -->
-        <ng-container *ngIf="canCreate">
-          <app-button
-            class="field__control"
-            title="Create Quote"
-            [type]="'PRIMARY'"
-            [icon]="'plus'"
-            (click)="quoteCreate.emit()"
-          ></app-button>
-        </ng-container>
-  
-        <!-- Delete Quote -->
-        <ng-container *ngIf="canDelete">
-          <app-button
-            class="field__control"
-            title="Delete Quote"
-            [type]="'DANGER'"
-            [icon]="'trash'"
-            (click)="quoteDelete.emit(quote)"
-          ></app-button>
-        </ng-container>
-  
-        <!-- Copy to Clipboard -->
+    }
+
+    <!-- Quote Refresh/Create/Edit/Delete Icons -->
+    <div class="field__controls">
+      @for (control of quoteControlls(); track $index) {
         <app-button
           class="field__control"
-          title="Copy Quote to Clipboard"
-          [type]="'DARK'"
-          [icon]="'copy'"
-          (click)="copyQuoteToClipboard()"
+          [title]="control.title"
+          [type]="control.type"
+          [text]="control.label"
+          [icon]="control.icon"
+          (click)="control.onClick()"
         ></app-button>
-        
-        <!-- Hyperlink to Quote Overview -->
-        <a [routerLink]="quoteOverviewUrl">
-          <app-button
-            class="field__control"
-            title="See all quotes"
-            [type]="'SECONDARY'"
-            [icon]="'th-list'"
-          ></app-button>
-        </a>
-  
-      </div>
+      }
     </div>
-  </ng-container>
+  </div>
 </ng-container>
 
 <ng-template #loading>
