Fix up encounterstuff

--- a/src/design/atoms/interactive-badge/interactive-badge.component.html
+++ b/src/design/atoms/interactive-badge/interactive-badge.component.html
@@ -1,25 +1,44 @@
 <div class="badge-container">
-  <a 
-    [routerLink]="textLink"
-    (click)="labelClick.emit()"
-    class="badge"
-    [ngClass]="{
-      'badge--part1': icon,
-      'bg-primary': type === 'PRIMARY',
-      'bg-secondary': type === 'SECONDARY',
-      'bg-dark': type === 'DARK',
-      'bg-danger': type === 'DANGER',
-      'bg-warning': type === 'WARNING',
-      'bg-info': type === 'INFO',
-      'bg-light': type === 'LIGHT',
-    }"
-  >
-    {{text}}
-  </a>
-  
-  <ng-container *ngIf="icon">
-    <a 
+  @if (textLink) {
+    <a
+      [routerLink]="textLink"
+      class="badge"
+      [ngClass]="{
+        'badge--part1': icon,
+        'bg-primary': type === 'PRIMARY',
+        'bg-secondary': type === 'SECONDARY',
+        'bg-dark': type === 'DARK',
+        'bg-danger': type === 'DANGER',
+        'bg-warning': type === 'WARNING',
+        'bg-info': type === 'INFO',
+        'bg-light': type === 'LIGHT',
+      }"
+    >
+      {{ text }}
+    </a>
+  } @else {
+    <button
+      (click)="labelClick.emit()"
+      class="badge"
+      [ngClass]="{
+        'badge--part1': icon,
+        'bg-primary': type === 'PRIMARY',
+        'bg-secondary': type === 'SECONDARY',
+        'bg-dark': type === 'DARK',
+        'bg-danger': type === 'DANGER',
+        'bg-warning': type === 'WARNING',
+        'bg-info': type === 'INFO',
+        'bg-light': type === 'LIGHT',
+      }"
+    >
+      {{ text }}
+    </button>
+  }
+
+  @if (icon) {
+    <button
       (click)="iconClick.emit()"
+      tabindex=""
       class="badge badge--part2"
       [ngClass]="{
         'bg-primary': iconType === 'PRIMARY',
@@ -31,8 +50,7 @@
         'bg-light': iconType === 'LIGHT',
       }"
     >
-      <app-icon [icon]="icon"></app-icon>
-    </a>
-  </ng-container>
+      <app-icon [icon]="icon" />
+    </button>
+  }
 </div>
-
