--- a/src/app/campaign/pages/character-page/character-page.component.html
+++ b/src/app/campaign/pages/character-page/character-page.component.html
@@ -10,6 +10,7 @@
     [characterQuote]="characterQuote"
     [campaignCharacters]="campaignCharacters()"
     [campaignOrganizations]="campaignOrganizations()"
+    [campaignLocations]="campaignLocations()"
     [serverUrl]="serverUrl"
     [encounters]="campaignEncounters() ?? []"
     [sessions]="campaignSessions() ?? []"
