--- a/src/design/organisms/encounter/encounter.component.html
+++ b/src/design/organisms/encounter/encounter.component.html
@@ -1,87 +1,80 @@
-<ng-container *ngIf="encounter || state === 'CREATE'">
+@if (encounter() || state() === "CREATE") {
   <h4 class="card__heading">
-    <ng-container [ngSwitch]="state">
-      <ng-container
-        *ngSwitchCase="'DISPLAY'"
-        [ngTemplateOutlet]="displayHeading"
-      ></ng-container>
-      <ng-container
-        *ngSwitchCase="'UPDATE'"
-        [ngTemplateOutlet]="updateHeading"
-      ></ng-container>
-      <ng-container
-        *ngSwitchCase="'OUTDATEDUPDATE'"
-        [ngTemplateOutlet]="updateHeading"
-      ></ng-container>
-      <ng-container
-        *ngSwitchCase="'CREATE'"
-        [ngTemplateOutlet]="createHeading"
-      ></ng-container>
-    </ng-container>
-  
-    <app-edit-toggle
-      *ngIf="canUpdate"
-      class="card__edit-button" 
-      [buttonType]="'DARK'"
-      [toggled]="state !== 'DISPLAY'"
-      (toggle)="onToggle($event)"
-    ></app-edit-toggle>
+    @switch (state()) {
+      @case ("DISPLAY") {
+        <ng-container [ngTemplateOutlet]="displayHeading" />
+      }
+      @case ("UPDATE") {
+        <ng-container [ngTemplateOutlet]="updateHeading" />
+      }
+      @case ("OUTDATEDUPDATE") {
+        <ng-container [ngTemplateOutlet]="updateHeading" />
+      }
+      @case ("CREATE") {
+        <ng-container [ngTemplateOutlet]="createHeading" />
+      }
+    }
+
+    @if (canUpdate()) {
+      <app-edit-toggle
+        class="card__edit-button"
+        [buttonType]="'DARK'"
+        [toggled]="state() !== 'DISPLAY'"
+        (toggle)="onToggle($event)"
+      ></app-edit-toggle>
+    }
   </h4>
-  
-  <ng-container [ngSwitch]="state">
-    <ng-container
-      *ngSwitchCase="'DISPLAY'"
-      [ngTemplateOutlet]="displayBody"
-    ></ng-container>
-    <ng-container
-      *ngSwitchCase="'UPDATE'"
-      [ngTemplateOutlet]="updateBody"
-    ></ng-container>
-    <ng-container
-      *ngSwitchCase="'OUTDATEDUPDATE'"
-      [ngTemplateOutlet]="updateBody"
-    ></ng-container>
-    <ng-container
-    *ngSwitchCase="'CREATE'"
-    [ngTemplateOutlet]="createBody"
-  ></ng-container>
-  </ng-container>
-  
-</ng-container>
+
+  @switch (state()) {
+    @case ("DISPLAY") {
+      <ng-container [ngTemplateOutlet]="displayBody" />
+    }
+    @case ("UPDATE") {
+      <ng-container [ngTemplateOutlet]="updateBody" />
+    }
+    @case ("OUTDATEDUPDATE") {
+      <ng-container [ngTemplateOutlet]="updateBody" />
+    }
+    @case ("CREATE") {
+      <ng-container [ngTemplateOutlet]="createBody" />
+    }
+  }
+}
 
 <ng-template #displayHeading>
-  {{ encounter?.title }}
+  {{ encounter()?.title }}
 </ng-template>
 
 <ng-template #displayBody>
   <!-- Encounter -->
-  <ng-container *ngIf="encounter">
+  @let encounterVal = encounter();
+  @if (encounterVal) {
     <div class="card__text">
-      <app-html-text [text]="encounter.description"></app-html-text>
+      <app-html-text [text]="encounterVal.description"></app-html-text>
     </div>
-  </ng-container>
+  }
 
   <app-separator></app-separator>
-  
+
   <!-- Encounter Connections -->
   <div class="card__connections">
-      <app-badge-list
-        [entries]="badgeEntries"
-        [createOptions]="{
-          options: characters,
-          valueProp: 'pk',
-          labelProp: 'name',
-        }"
-        [canCreate]="canCreate"
-        [canDelete]="canDelete"
-        [cancelButtonType]="'DARK'"
-        (entryCreate)="onConnectionCreate($event)"
-        (entryDelete)="onConnectionDelete($event)"
-      ></app-badge-list>
+    <app-badge-list
+      [entries]="badgeEntries()"
+      [createOptions]="{
+        options: characters(),
+        valueProp: 'pk',
+        labelProp: 'name',
+      }"
+      [canCreate]="canCreate()"
+      [canDelete]="canDelete()"
+      [cancelButtonType]="'DARK'"
+      (entryCreate)="onConnectionCreate($event)"
+      (entryDelete)="onConnectionDelete($event)"
+    ></app-badge-list>
   </div>
-  
+
   <!-- Encounter Footer/Delete Toggle -->
-  <ng-container *ngIf="canDelete">
+  @if (canDelete()) {
     <app-confirmation-toggle-button
       class="card__delete-confirmer"
       [toggleType]="'DANGER'"
@@ -89,51 +82,44 @@
       [icon]="'trash'"
       (confirm)="onEncounterDelete()"
     ></app-confirmation-toggle-button>
-  </ng-container>
+  }
 </ng-template>
 
-<ng-template #updateHeading>
-  Update "{{encounter?.title}}"
-</ng-template>
+<ng-template #updateHeading> Update "{{ encounter()?.title }}" </ng-template>
 
 <!-- Form to Update Encounters -->
 <ng-template #updateBody>
-    <ng-container *ngIf="canUpdate && state === 'UPDATE'">
-        <app-form
-          [model]="userModel" 
-          [fields]="formlyFields"
-          [cancelButtonType]="'DARK'"
-          (formlySubmit)="onEncounterUpdate(userModel)" 
-          (formlyCancel)="changeState('DISPLAY', undefined)"
-        ></app-form>
-    </ng-container>
-
-    <ng-container *ngIf="canUpdate && state === 'OUTDATEDUPDATE'">
-        <app-compare-form
-          [fields]="formlyFields"
-          [modelFromUser]="userModel"
-          [modelFromServer]="serverModel"
-          [displayVertically]="true"
-          (updateSubmit)="onEncounterUpdate(userModel)"
-          (cancel)="changeState('DISPLAY', undefined)"
-        ></app-compare-form>  
-    </ng-container>
+  @if (canUpdate() && state() === "UPDATE") {
+    <app-form
+      [model]="userModel()"
+      [fields]="formlyFields()"
+      [cancelButtonType]="'DARK'"
+      (formlySubmit)="onEncounterUpdate(userModel())"
+      (formlyCancel)="changeState('DISPLAY', undefined)"
+    ></app-form>
+  } @else if (canUpdate() && state() === "OUTDATEDUPDATE") {
+    <app-compare-form
+      [fields]="formlyFields()"
+      [modelFromUser]="userModel()"
+      [modelFromServer]="serverModel()"
+      [displayVertically]="true"
+      (formlySubmit)="onEncounterUpdate($event)"
+      (formlyCancel)="changeState('DISPLAY', undefined)"
+    ></app-compare-form>
+  }
 </ng-template>
 
-
-<ng-template #createHeading>
-  Create new Encounter
-</ng-template>
+<ng-template #createHeading> Create new Encounter </ng-template>
 
 <!-- Form to Update Encounters -->
 <ng-template #createBody>
-    <ng-container *ngIf="canCreate && state === 'CREATE'">
-        <app-form
-          [model]="userModel" 
-          [fields]="formlyFields"
-          [cancelButtonType]="'DARK'"
-          (formlySubmit)="onEncounterCreate(userModel)" 
-          (formlyCancel)="onEncounterCreateCancel()"
-        ></app-form>
-    </ng-container>
+  @if (canCreate() && state() === "CREATE") {
+    <app-form
+      [model]="userModel()"
+      [fields]="formlyFields()"
+      [cancelButtonType]="'DARK'"
+      (formlySubmit)="onEncounterCreate($event)"
+      (formlyCancel)="onEncounterCreateCancel()"
+    ></app-form>
+  }
 </ng-template>
